# testcontainer-python-rabbitmq

./: .flake8  .pre-commit-config.yaml  README.md  ci.yml  pyproject.toml
.github/workflows/: main.yml
testcontainer_python_rabbitmq/: __init__.py  rabbitmq.py
tests/: test_testcontainer_python_rabbitmq.py
