[tool.poetry]
name = "testcontainer-python-rabbitmq"
version = "0.1.0"
description = ""
authors = ["Max Fröhlich <max.froehlich@serviceware.de>"]

[tool.poetry.dependencies]
python = "^3.6"
testcontainers = { version = "^2.5" }

[tool.poetry.dev-dependencies]
pytest = "^5.3.4"
flake8 = "^3.7.9"
black = "^19.10b0"
pika = "^1.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
