[tool.poetry]
name = "testcontainer-python-rabbitmq"
version = "0.4.0"
description = "Testcontainer for RabbitMQ"
authors = ["Max Fröhlich <max.froehlich@serviceware.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
testcontainers ="^3.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^5.0.4"
black = "^22.6.0"
pika = "^1.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
